# hornspec

./: .gitignore  CMakeLists.txt  README.md  contributors.txt
bench_horn/: array_altern_copy.smt2  array_altern_copy_positive.smt2  array_altern_shift.smt2  array_altern_swap.smt2  array_copy.smt2  array_copy_increment.smt2  array_copy_increment_ind.smt2  array_find.smt2  array_fixed_range_01.smt2  array_fixed_range_02.smt2  array_index_compl.smt2  array_init_batches.smt2  array_init_both_ends.smt2  array_init_both_ends_simpl.smt2  array_init_const_const.smt2  array_init_disj.smt2  array_init_disj_const.smt2  array_init_ite_dupl.smt2  array_init_monot_ind.smt2  array_min_const.smt2  array_min_swap.smt2  array_password_naive.smt2  array_password_standard.smt2  array_single_elem_inrem.smt2  array_tiling_skipped.smt2  bouncy_three_counters_merged.smt2  bouncy_two_counters_merged.smt2  count_by_2_modif_true-unreach-call_true-termination.smt2  count_by_k_true-unreach-call_true-termination.smt2  count_by_k_true-unreach-call_true-termination_bound.smt2  dillig10.smt2  dillig12.smt2  dillig15.smt2  dillig17.smt2  dillig28.smt2  nonlin_mod_2.smt2  samples_multiple_inv_01.smt2  samples_multiple_inv_03.smt2  samples_multiple_inv_04.smt2  w2.smt2
bench_horn_cex/: abdu_08.smt2  array_init_addvar_cex.smt2  array_init_and_copy_cex.smt2  array_init_doubl_cex.smt2  array_init_increm_cex.smt2  array_init_increm_twice_cex.smt2  array_init_increm_two_arrs_antisym_cex.smt2  array_init_increm_two_arrs_cex.smt2  array_init_ite_cex.smt2  array_init_ite_jump_cex.smt2  array_init_pair_sum_cex.smt2  array_init_pair_symmetr_cex.smt2  array_init_reverse_cex.smt2  array_init_symmetr_swap_cex.smt2  array_min_and_copy_cex.smt2  array_min_and_copy_shift_sum_cex.smt2  array_min_swap_cex.smt2  chc-lia-nonlin-0003.smt2  chc-lia-nonlin-0009.smt2  chc-lia-nonlin-0015.smt2  chc-lia-nonlin-0018.smt2  chc-lia-nonlin-0019.smt2  chc-lia-nonlin-0027.smt2  chc-lia-nonlin-0028.smt2  chc-lia-nonlin-0030.smt2  chc-lia-nonlin-0041.smt2  chc-lia-nonlin-0067.smt2  chc-lia-nonlin-0069.smt2  chc-lia-nonlin-0095.smt2  chc-lia-nonlin-0098.smt2  chc-lia-nonlin-0100.smt2  chc-lia-nonlin-0103.smt2  chc-lia-nonlin-0104.smt2  chc-lia-nonlin-0107.smt2  chc-lia-nonlin-0109.smt2  chc-lia-nonlin-0110.smt2  chc-lia-nonlin-0111.smt2  chc-lia-nonlin-0113.smt2  chc-lia-nonlin-0116.smt2  chc-lia-nonlin-0118.smt2  (+14 more)
bench_horn_exampl/: count_nonlin_bnd_2.smt2  nonlinear_0.smt2  nonlinear_1.smt2  nonlinear_2.smt2  nonlinear_3.smt2  nonlinear_9.smt2  pow_linear_sat.smt2  pow_nonlinear_0_sat_0.smt2  pow_nonlinear_1_sat_0.smt2  pow_nonlinear_2_sat_0.smt2  pow_nonlinear_2_sat_2.smt2  pow_nonlinear_2_sat_3.smt2  pow_nonlinear_2_sat_4.smt2
bench_horn_ice/: abdu_01.bpl  abdu_02.bpl  abdu_03.bpl  abdu_04.bpl  bhmr2007_true-unreach-call.bpl  bouncy_three_counters_merged.bpl  bouncy_two_counters_merged.bpl  cegar1.bpl  cegar2.bpl  cggmp_iter_1.bpl  cggmp_iter_2.bpl  cggmp_iter_3.bpl  const_div_1.bpl  const_div_2.bpl  const_div_3.bpl  const_div_4.bpl  const_div_mod.bpl  const_mod_1.bpl  const_mod_2.bpl  const_mod_3.bpl  count_by_1_variant_true-unreach-call_true-termination.bpl  count_by_2_modif_true-unreach-call_true-termination.bpl  count_by_2_true-unreach-call_true-termination.bpl  count_by_k_true-unreach-call_true-termination_bound.bpl  count_by_k_true-unreach-call_true-termination_unbound.bpl  countud.bpl  css2003_true-unreach-call.bpl  dillig01.bpl  dillig02.bpl  dillig03.bpl  dillig04.bpl  dillig05.bpl  dillig07.bpl  dillig08.bpl  dillig10.bpl  dillig13.bpl  dillig14.bpl  dillig15.bpl  dillig16.bpl  dillig18.bpl  (+109 more)
bench_horn_multiple/: abdu_03.smt2  array_aws_01.smt2  array_bubble_sort_rev.smt2  array_hybr_add.smt2  array_hybr_sum.smt2  array_init_addvar.smt2  array_init_addvar4.smt2  array_init_and_copy_inverse.smt2  array_init_reverse_const.smt2  array_min_and_copy_shift.smt2  array_min_and_copy_shift_sum.smt2  array_min_and_copy_shift_sum_add.smt2  array_tiling_poly6.smt2  dillig22-4.smt2  dillig24.smt2  dillig25.smt2  half_true_modif.smt2  niagara.smt2  nonlin_multiple_inv_01.smt2  nonlin_multiple_inv_02.smt2  nonlin_multiple_inv_03.smt2  nonlin_multiple_inv_04.smt2  nonlin_multiple_inv_05.smt2  nonlin_multiple_inv_06.smt2  nonlin_multiple_inv_07.smt2  nonlin_multiple_inv_08.smt2  nonlin_multiple_inv_09.smt2  nonlin_multiple_inv_10.smt2  nonlin_multiple_inv_11.smt2  nonlin_multiple_inv_12.smt2  nonlin_multiple_inv_13.smt2  nonlin_multiple_inv_14.smt2  nonlin_multiple_inv_15.smt2  nonlin_multiple_inv_16.smt2  nonlin_multiple_inv_96.smt2  nonlin_multiple_inv_97.smt2  nonlin_multiple_inv_98.smt2  nonlin_multiple_inv_99.smt2  s_mutants_19_m.smt2  s_mutants_20.smt2  (+8 more)
bench_horn_multiple_c/: common.h  run.sh  samples_multiple_inv_08.c
bench_horn_multiple_ice/: samples_multiple_inv_01.bpl  samples_multiple_inv_02.bpl  samples_multiple_inv_03.bpl  samples_multiple_inv_04.bpl
bench_horn_nonlin/: chc-lia-nonlin-0000.smt2  chc-lia-nonlin-0001.smt2  chc-lia-nonlin-0002.smt2  chc-lia-nonlin-0004.smt2  chc-lia-nonlin-0005.smt2  chc-lia-nonlin-0006.smt2  chc-lia-nonlin-0007.smt2  chc-lia-nonlin-0011.smt2  chc-lia-nonlin-0012.smt2  chc-lia-nonlin-0013.smt2  chc-lia-nonlin-0014.smt2  chc-lia-nonlin-0016.smt2  chc-lia-nonlin-0017.smt2  chc-lia-nonlin-0020.smt2  chc-lia-nonlin-0021.smt2  chc-lia-nonlin-0023.smt2  chc-lia-nonlin-0024.smt2  chc-lia-nonlin-0025.smt2  chc-lia-nonlin-0026.smt2  chc-lia-nonlin-0029.smt2  chc-lia-nonlin-0032.smt2  chc-lia-nonlin-0035-simp.smt2  chc-lia-nonlin-0038.smt2  chc-lia-nonlin-0042.smt2  chc-lia-nonlin-0043.smt2  chc-lia-nonlin-0044.smt2  chc-lia-nonlin-0045.smt2  chc-lia-nonlin-0048.smt2  chc-lia-nonlin-0049.smt2  chc-lia-nonlin-0050.smt2  chc-lia-nonlin-0051.smt2  chc-lia-nonlin-0052.smt2  chc-lia-nonlin-0054.smt2  chc-lia-nonlin-0055.smt2  chc-lia-nonlin-0056.smt2  chc-lia-nonlin-0057.smt2  chc-lia-nonlin-0058.smt2  chc-lia-nonlin-0059.smt2  chc-lia-nonlin-0060.smt2  chc-lia-nonlin-0063.smt2  (+69 more)
bench_pldi21/: bench1.smt2  bench10.smt2  bench11.smt2  bench12.smt2  bench14.smt2  bench16.smt2  bench17.smt2  bench2.smt2  bench20.smt2  (+21 more)
(+314 files in other folders)
